# sicilian-word-grouping

./: .env.template  .gitignore  README.md  opencode.json  pyproject.toml
src/: config.py  main.py
src/common/: cost.py  errors.py  layout.py  logger.py  normalize.py
src/extract/: __init__.py  ocr_extractor.py  pdf_extractor.py
src/load/: __init__.py  load.py
src/models/: __init__.py  dictionary_entry.py
src/transform/: __init__.py  client.py  prompter.py
src/validate/: __init__.py  validate.py
test/: test_config.py  test_logger.py  test_main.py
test/common/: test_cost.py  test_layout.py  test_normalize.py
test/extract/: test_ocr_extractor.py  test_pdf_extractor.py
test/load/: test_load.py
test/models/: test_dictionary_entry_layout.py
test/transform/: test_client.py  test_prompter.py
test/validate/: test_validate.py
