[project]
name = "sicilian-word-grouping"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymupdf",
    "pillow",
    "pydantic",
    "pydantic-settings",
    "openai",
]

[project.scripts]
sicilian-word-grouping = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["test"]