[project]
name = "sicilian-word-grouping"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymupdf",
    "pillow",
    "pydantic",
    "pydantic-settings",
    "openai",
    "rapidfuzz",
    "numpy>=2.5.1",
]

[project.scripts]
sicilian-word-grouping = "src.main:main"
vs-character-ocr = "src.character_ocr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["test"]
filterwarnings = [
    "ignore:builtin type Swig.* has no __module__ attribute:DeprecationWarning",
]
